# korba

./: .env.example  .gitignore  CLAUDE.md  PLAN.md  archive.tar  docker-compose.yml  nginx.conf
.github/workflows/: ci.yml
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/app/: config.py  database.py  dev_redis.py  main.py  socket_events.py
backend/app/api/: deps.py
backend/app/api/v1/: __init__.py  agency.py  auth.py  couriers.py  disputes.py  notifications.py  orders.py  payments.py  products.py  ratings.py  uploads.py  vendors.py
backend/app/models/: __init__.py  agency.py  base.py  delivery.py  dispute.py  notification.py  order.py  payment.py  product.py  user.py  vendor.py
backend/app/schemas/: auth.py
backend/app/services/: assignment.py  auth.py  escrow.py  notifications.py  state_machine.py  storage.py
backend/tests/: test_assignment.py  test_auth.py  test_state_machine.py
files/livraison/: README.md
files/livraison/chats/: chat1.md
files/livraison/project/: .thumbnail  Korba.html  app.jsx  index.html  tokens.css
frontend/: Dockerfile  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/api/: auth.ts  client.ts  orders.ts  products.ts
frontend/src/containers/: AgencyDashboardContainer.tsx  AgencyDeliveryHistoryContainer.tsx  AgencyDriversContainer.tsx  AgencyRatingsContainer.tsx  AgencyRevenueContainer.tsx  AgencyTeamZonesContainer.tsx  AuthContainer.tsx  ClientCatalogueContainer.tsx  ClientCheckoutContainer.tsx  ClientHomeContainer.tsx  (+23 more)
(+24 files in other folders)
